5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4150/executions/1674_1879.log
== TEST (2019-05-01 14:44:56) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

a = float(input("numero de horas extras: "))
b = float(input("numero de horas que faltou: "))

print(a, "extras e", b, "faltas")

h = (a - (0.25*b))

if (h > 400)
	print("R$ 500")
else:
	if(h<=400):
		print("R$ 100")
-- ERROR:
File "XXXX", line 10
    if (h > 400)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 14:45:03) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

a = float(input("numero de horas extras: "))
b = float(input("numero de horas que faltou: "))

print(a, "extras e", b, "faltas")

h = (a - (0.25*b))

if (h > 400):
	print("R$ 500")
else:
	if(h<=400):
		print("R$ 100")
-- OUTPUT:
420.0 extras e 20.0 faltas
R$ 500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 14:45:30) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

a = float(input("numero de horas extras: "))
b = float(input("numero de horas que faltou: "))

print(a, "extras e", b, "de falta")

h = (a - (0.25*b))

if (h > 400):
	print("R$ 500")
else:
	if(h<=400):
		print("R$ 100")
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 14:45:39) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

a = float(input("numero de horas extras: "))
b = float(input("numero de horas que faltou: "))

print(a, "extras e", b, "de falta")

h = (a - (0.25*b))

if (h > 400):
	print("R$ 500")
else:
	if(h<=400):
		print("R$ 100")
-- EXECUTION TIME:
0.124923
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 14:45:54) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

a = float(input("numero de horas extras: "))
b = float(input("numero de horas que faltou: "))

print(a, "extras e", b, "de falta")

h = (a - (0.25*b))

if (h > 400):
	print("R$ 500")
else:
	if(h<=400):
		print("R$ 100")
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 14:46:24) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

a = float(input("numero de horas extras: "))
b = float(input("numero de horas que faltou: "))

print(a, "extras e", b, "de falta")

h = (a - (0.25*b))

if (h > 400):
	print("R$ 500.0")
else:
	if(h<=400):
		print("R$ 100.0")
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 14:46:46) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

a = float(input("numero de horas extras: "))
b = float(input("numero de horas que faltou: "))

print(a, "extras e", b, "de falta")

h = (a - (0.25*b))

if (h > 400):
	print("R$ 500.0")
else:
	if(h<=400):
		print("R$ 100.0")
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 14:46:57) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

a = float(input("numero de horas extras: "))
b = float(input("numero de horas que faltou: "))

print(a, "extras e", b, "de falta")

h = (a - (0.25*b))

if (h > 400):
	print("R$ 500.0")
else:
	if(h<=400):
		print("R$ 100.0")
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 14:47:10) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

a = float(input("numero de horas extras: "))
b = float(input("numero de horas que faltou: "))

print(a, "extras e", b, "de falta")

h = (a - (0.25*b))

if (h > 400):
	print("R$ 500.0")
else:
	if(h<=400):
		print("R$ 100.0")
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 14:47:22) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

a = float(input("numero de horas extras: "))
b = float(input("numero de horas que faltou: "))

print(a, "extras e", b, "de falta")

h = (a - (0.25*b))

if (h > 400):
	print("R$ 500.0")
else:
	if(h<=400):
		print("R$ 100.0")
-- EXECUTION TIME:
0.169695
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
